# pipeval

./: CHECKLIST.md  FILES_SUMMARY.md  SETUP_GUIDE.md  gitignore  pyproject.toml
.github/workflows/: publish.yml
data_validator.egg-info/: PKG-INFO  SOURCES.txt
pipeval/: __init__.py  core.py  readers.py  types.py  validators.py
pipeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py  test_readers.py  test_validators.py
